--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -10,6 +10,24 @@
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
 <body>
-    
+    <header id="header" class="up-container">
+        <div class="container">
+          <a href="#top">
+            <img id="logo" src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png" alt="logo">
+            <h1>Fan Gogh</h1>
+          </a>
+          <ul>
+            <li><a href="./pages/paintings.html">PAINTINGS</a></li>
+            <li><a href="./pages/artists.html">ARTISTS</a></li>
+            <li><a href="./pages/tickets.html">TICKETS</a></li>
+          </ul>
+        </div>
+      </header>
+      <main>
+
+      </main>
+      <footer>
+        <h5>Copyright ®</h5>
+      </footer>
 </body>
 </html>
