--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -21,9 +21,9 @@
                 <h1>Fan Gogh</h1>
             </a>
             <ul>
-                <li><a href="./pages/paintings.html">PAINTINGS</a></li>
-                <li><a href="./pages/artists.html">ARTISTS</a></li>
-                <li><a href="./pages/tickets.html">TICKETS</a></li>
+                <li><a href="./paintings.html">PAINTINGS</a></li>
+                <li><a href="./artists.html">ARTISTS</a></li>
+                <li><a href="./tickets.html">TICKETS</a></li>
             </ul>
         </div>
     </header>
