--- a/pages/artists.html
+++ b/pages/artists.html
@@ -5,11 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artists</title>
-
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/artists.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/artists.css">
 </head>
 <body>
-    
+
+    <section class="section-container" id="artists">
+        <div class="div-container">
+            <h2> All the artists in the Exhibition</h2>
+            <ul class="container1">
+                <li>
+                    <img class="artist-pictures" src="./img/davinci.jpg" alt="A picture of the artist Leonardo da Vinci">
+                    <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Leonardo danVinci</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/vangogh.jpg" alt="A picture of the artist Vincent van Gogh">
+                    <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank">Vincent van Gogh</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/edward-munch.jpg" alt="A picture of the artist Edward Munch">
+                    <a href="https://en.wikipedia.org/wiki/Edvard_Munch" target="_blank">Edward Munch</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/johannes-vermeer.jpg" alt="A picture of the artist Johannes_Vermeer">
+                    <a href="https://en.wikipedia.org/wiki/Johannes_Vermeer" target="_blank">Johannes Vermeer</a>
+                </li>
+            </ul>
+        </div>
+
+    </section>
+
+    <section class="section-container" id="artists">
+        <div class="div-container">
+            <ul class="container1">
+                <li>
+                    <img class="artist-pictures" src="./img/Sandro-Botticelli.jpg" alt="A picture of the artist Sandro Botticelli">
+                    <a href="https://en.wikipedia.org/wiki/Sandro_Botticelli" target="_blank">Sandro Botticelli</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/rembrandt.jpg" alt="A picture of the artist Rembrandt">
+                    <a href="https://en.wikipedia.org/wiki/Rembrandt" target="_blank">Rembrandt</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/salvador-dali.jpg" alt="A picture of the artist Salvador Dali">
+                    <a href="https://en.wikipedia.org/wiki/Salvador_Dal%C3%AD" target="_blank">Salvador Dali</a>
+                </li>
+                <li>
+                    <img class="artist-pictures" src="./img/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
+                    <a href="https://en.wikipedia.org/wiki/James_Abbott_McNeill_Whistler" target="_blank">James McNeill Whistler</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
