--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -14,7 +14,7 @@
 <body>
     <header id="header" class="up-container">
         <div class="container">
-            <a href="#top">
+            <a href="../index.html">
                 <img id="logo" src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png" alt="logo">
                 <h1>Fan Gogh</h1>
             </a>
