--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -14,21 +14,14 @@
 <body>
     <header id="header" class="up-container">
         <div class="container">
-<<<<<<< Updated upstream
             <a href="../index.html">
                 <img id="logo" src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png" alt="logo">
-=======
-            <a href="#top">
-                <img id="logo"
-                    src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
-                    alt="logo">
->>>>>>> Stashed changes
-                <h1>Fan Gogh</h1>
+                <strong>Fan Gogh</strong>
             </a>
             <ul>
-                <li><a href="./pages/paintings.html">PAINTINGS</a></li>
-                <li><a href="./pages/artists.html">ARTISTS</a></li>
-                <li><a href="./pages/tickets.html">TICKETS</a></li>
+                <li><a href="./paintings.html">PAINTINGS</a></li>
+                <li><a href="./artists.html">ARTISTS</a></li>
+                <li><a href="./tickets.html">TICKETS</a></li>
             </ul>
         </div>
     </header>
