--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -19,7 +19,7 @@
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
-                <li><a href="./paintings.html">PAINTINGS</a></li>
+                <li><a href="">PAINTINGS</a></li>
                 <li><a href="./artists.html">ARTISTS</a></li>
                 <li><a href="./tickets.html">TICKETS</a></li>
             </ul>
