grid container fixed

--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tickets</title>
 
-    <link rel="stylesheet" href="../css/main.css" />
+    <!--  <link rel="stylesheet" href="../css/main.css" /> -->
     <link rel="stylesheet" href="../css/tickets.css" />
   </head>
   <body>
@@ -29,11 +29,11 @@
     </header> -->
 
     <main>
-      <div class="wrapper">
+      <div class="flex-container">
         <h2>Tickets</h2>
         <p>Choose the best suitable date for you to visit our exhibition</p>
       </div>
-      <div class="grid-container">
+       <div class="grid-container">
         <div class="item">Mar 8</div>
         <div class="buy-btn-small">Buy</div>
         <div class="item">Mar 10</div>
@@ -50,7 +50,7 @@
         <div class="buy-btn-small">Buy</div>
         <div class="item">Apr 10</div>
         <div class="buy-btn-small">Buy</div>
-      </div>
+      
     </main>
     <footer>
       <h5>Copyright ®</h5>
