--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             src="./images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
             alt="logo"
           />
-          <h1>Fan Gogh</h1>
+          <strong>Fan Gogh</strong>
         </a>
         <ul>
           <li><a href="./pages/paintings.html">PAINTINGS</a></li>
