--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="up-container" id="hero">
         <div class="container hero-container">
           <div class="hero-txt-area">
-            <h2>Come see our exhibition</h2>
+            <h1>Come see our exhibition</h1>
             <p>
               Best replicas of the most famous works in the world now near
               you.<br>Bringing art and history to everyone.
@@ -59,7 +59,7 @@
 
       <section class="up-container" id="information">
         <div class="container">
-          <h3>The 4 Most Famous Paintings In The World</h3>
+          <h2>The 4 Most Famous Paintings In The World</h2>
           <ul class="container">
             <li>
               <img class="mid-page-img" src="./images/othavio//4-most-famous-paintings/mona-lisa.png" alt="Mona Lisa painting; Oil on poplar panel"/>
@@ -96,7 +96,7 @@
       <section id="blue-box" class="up-container">
         <div id="blue-box-container" class="container">
           <div>
-            <h4>Call to action! It's time!</h4>
+            <h3>Call to action! It's time!</h3>
             <p>Buy a ticket and come today to see everything up close!</p>
           </div>
           <a href="./pages/tickets.html">
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-      <h5>Copyright ®</h5>
+      <strong>Copyright ®</strong>
     </footer>
   </body>
 </html>
