--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tickets</title>
 
-    <!--  <link rel="stylesheet" href="../css/main.css" /> -->
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/tickets.css" />
   </head>
   <body>
-    <!--   <header id="header" class="up-container">
+  <header id="header" class="up-container">
       <div class="container">
         <a href="#top">
           <img
@@ -26,8 +26,7 @@
           <li><a href="#blue-box">TICKETS</a></li>
         </ul>
       </div>
-    </header> -->
-
+</header>
     <main>
       <div class="flex-container">
         <h2>Tickets</h2>
@@ -35,21 +34,21 @@
       </div>
        <div class="grid-container">
         <div class="item">Mar 8</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Mar 10</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Mar 12</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Mar 14</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Mar 22</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Apr 3</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Apr 7</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
         <div class="item">Apr 10</div>
-        <div class="buy-btn-small">Buy</div>
+        <div class="buy-btn-small"><a href="#">Buy</a></div>
       
     </main>
     <footer>
