adding logo alt text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img
             id="logo"
             src="./images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
-            alt="logo"
+            alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"
           />
           <strong>Fan Gogh</strong>
         </a>
