--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paintings</title>
-
+    <link rel="icon"href="../images/othavio/icons/favicon-32x32.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"  rel="stylesheet"/>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
-
 <body>
     <header id="header" class="up-container">
         <div class="container">
@@ -193,5 +192,4 @@
         <h5>Copyright ®</h5>
     </footer>
 </body>
-
 </html>
