--- a/pages/artists.html
+++ b/pages/artists.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artists</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/artists.css">
 </head>
 <body>
+    <header id="header" class="up-container">
+        <div class="container">
+        <a href="#top">
+            <img
+            id="logo"
+            src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
+            alt="logo"
+            />
+            <h1>Fan Gogh</h1>
+        </a>
+        <ul>
+            <li><a href="./pages/paintings.html">PAINTINGS</a></li>
+            <li><a href="./pages/artists.html">ARTISTS</a></li>
+            <li><a href="./pages/tickets.html">TICKETS</a></li>
+        </ul>
+        </div>
+    </header>
 
     <section class="section-container" id="artists">
         <div class="div-container">
@@ -20,15 +37,15 @@
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/vangogh.jpg" alt="A picture of the artist Vincent van Gogh">
-                    <a href="#gogh" target="_blank">Vincent van Gogh</a>
+                    <a href="#gogh">Vincent van Gogh</a>
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/edward-munch.jpg" alt="A picture of the artist Edward Munch">
-                    <a href="#munch" target="_blank">Edward Munch</a>
+                    <a href="#munch">Edward Munch</a>
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/johannes-vermeer.jpg" alt="A picture of the artist Johannes_Vermeer">
-                    <a href="#vermeer" target="_blank">Johannes Vermeer</a>
+                    <a href="#vermeer">Johannes Vermeer</a>
                 </li>
             </ul>
         </div>
@@ -40,19 +57,19 @@
             <ul class="container1">
                 <li>
                     <img class="artist-pictures" src="../images/varie/Sandro-Botticelli.jpg" alt="A picture of the artist Sandro Botticelli">
-                    <a href="#botticelli" target="_blank">Sandro Botticelli</a>
+                    <a href="#botticelli">Sandro Botticelli</a>
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/rembrandt.jpg" alt="A picture of the artist Rembrandt">
-                    <a href="#rembrandt" target="_blank">Rembrandt</a>
+                    <a href="#rembrandt">Rembrandt</a>
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/salvador-dali.jpg" alt="A picture of the artist Salvador Dali">
-                    <a href="#dali" target="_blank">Salvador Dali</a>
+                    <a href="#dali">Salvador Dali</a>
                 </li>
                 <li>
                     <img class="artist-pictures" src="../images/varie/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
-                    <a href="#whistler" target="_blank">James McNeill Whistler</a>
+                    <a href="#whistler">James McNeill Whistler</a>
                 </li>
             </ul>
         </div>
@@ -60,7 +77,7 @@
 
     <section class="more-info">
         <div class="div-info" id="davinci">
-            <h3><strong>Leonardo di ser Piero da Vinci</strong></h3>
+            <strong>Leonardo di ser Piero da Vinci</strong>
             <P>
                 Leonardo di ser Piero da Vinci (1452 - 1519) was an Italian polymath of the High Renaissance who was active as a painter, draughtsman, engineer, scientist, theorist, sculptor, and architect.
                 While his fame initially rested on his achievements as a painter, he also became known for his notebooks, in which he made drawings and notes on a variety of subjects, including anatomy, astronomy, botany, cartography, painting, and paleontology.
@@ -70,7 +87,7 @@
         </div>
         <br>
         <div class="div-info" id="gogh">
-            <h3><strong>Vincent Willem van Gogh</strong></h3>
+            <strong>Vincent Willem van Gogh</strong>
             <p>
                 Vincent Willem van Gogh (1853 - 1890) was a Dutch Post-Impressionist painter who posthumously became one of the most famous and influential figures in Western art history. 
                 In a decade, he created about 2,100 artworks, including around 860 oil paintings.
@@ -81,7 +98,7 @@
         </div>
         <br>
         <div class="div-info" id="munch">
-            <h3><strong>Edvard Munch</strong></h3>
+            <strong>Edvard Munch</strong>
             <p>
                 Edvard Munch(1863 - 1944) was a Norwegian painter. His best known work, The Scream (1893), has become one of Western art's most iconic images.
                 he Scream was conceived in Kristiania. According to Munch, he was out walking at sunset, when he 'heard the enormous, infinite scream of nature'. The painting's agonized face is widely identified with the angst of the modern person.
@@ -91,7 +108,7 @@
         </div>
         <br>
         <div class="div-info" id="vermeer">
-            <h3><strong>Johannes Vermeer </strong></h3>
+            <strong>Johannes Vermeer </strong>
             <p>
                 Johannes Vermeer also known as Jan Vermeer; (1632 - 1675) was a Dutch Baroque Period painter who specialized in domestic interior scenes of middle-class life. 
                 During his lifetime, he was a moderately successful provincial genre painter, recognized in Delft and The Hague.
@@ -101,7 +118,7 @@
         </div>
         <br>
         <div class="div-info" id="botticelli">
-            <h3><strong>Sandro Botticelli</strong></h3>
+            <strong>Sandro Botticelli</strong>
             <p>
                 Sandro Botticelli officially known as Alessandro di Mariano di Vanni Filipepi (1445 - 1510), known as, was an Italian painter of the Early Renaissance. 
                 His best-known works are The Birth of Venus and Primavera, both in the Uffizi in Florence, which holds many of Botticelli's works.
@@ -111,7 +128,7 @@
         </div>
         <br>
         <div class="div-info" id="rembrandt">
-            <h3><strong>Rembrandt Harmenszoon van Rijn</strong></h3>
+            <strong>Rembrandt Harmenszoon van Rijn</strong>
                 <p>
                     Rembrandt Harmenszoon van Rijn (1606 - 1669), usually simply known as Rembrandt, was a Dutch Golden Age painter, printmaker and draughtsman. An innovative and prolific master in three media he is generally considered one of the greatest visual artists in the history of art and the most important in Dutch art history.
                     His reputation as the greatest etcher in the history of the medium was established in his lifetime. Few of his paintings left the Dutch Republic while he lived, but his prints were circulated throughout Europe, and his wider reputation was initially based on them alone.
@@ -121,7 +138,7 @@
         </div>
         <br>
         <div class="div-info" id="dali">
-            <h3><strong>Salvador Dalí</strong></h3>
+            <strong>Salvador Dalí</strong>
             <p>
                 Salvador Dalí was a Spanish surrealist artist renowned for his technical skill, precise draftsmanship, and the striking and bizarre images in his work.
                 His best-known work, The Persistence of Memory, was completed in August 1931, and is one of the most famous Surrealist paintings.
@@ -131,7 +148,7 @@
         </div>
         <br>
         <div class="div-info" id="whistler">
-            <h3><strong>James Abbott McNeill Whistler</strong></h3>
+            <strong>James Abbott McNeill Whistler</strong>
             <p>
                 James Abbott McNeill Whistler (1834 - 1903) was an American painter active during the American Gilded Age and based primarily in the United Kingdom.
                 His most famous painting, Arrangement in Grey and Black No. 1 (1871), commonly known as Whistler's Mother, is a revered and often parodied portrait of motherhood.
@@ -140,6 +157,10 @@
             <a href="#artists">Return to top</a>
         </div>
     </section>
+
+    <footer>
+        <h5>Copyright ®</h5>
+    </footer>
 
 </body>
 </html>
