--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paintings</title>
-    <link rel="icon"href="../images/othavio/icons/favicon-32x32.png"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"  rel="stylesheet"/>
+    <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
+
 <body>
+    <div id="top"></div>
     <header id="header" class="up-container">
         <div class="container">
             <a href="../index.html">
@@ -191,5 +194,14 @@
     <footer>
         <h5>Copyright ®</h5>
     </footer>
+    <a href="#top" id="to-top-btn">
+        <svg viewBox="0 0 32 32">
+            <g>
+                <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
+                <path d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
+            </g>
+        </svg>
+    </a>
 </body>
+
 </html>
