--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,20 @@
     <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
+
 <body>
     <div id="top"></div>
     <header id="header" class="up-container">
         <div class="container">
             <a href="../index.html">
-                <img id="logo" src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png" alt="logo">
+                <img id="logo"
+                    src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
+                    alt="logo">
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
@@ -28,7 +33,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="contents">
             <div class="p-container">
                 <h1>"Fan Gogh" Exhibition Paintings</h1>
                 <p><em>Page contents:</em></p>
@@ -74,122 +79,126 @@
                 </ul>
             </div>
         </section>
-        <ul id="gallery">
-            <li id="birth-of-venus">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/birth-of-venus.jpg"
-                            alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
-                        <figcaption>
-                            The Birth Of Venus <br>
-                            <a href="">Sandro Botticelli</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="guernica">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/guernica.jpg" alt="Painting 'Guernica'. Pablo Picasso">
-                        <figcaption>
-                            Guernica <br>
-                            <a href="">Pablo Picasso</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="last-supper">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/last-supper.jpg" alt="Painting 'The Last Supper'. Leonardo da Vinci">
-                        <figcaption>
-                            The Last Supper <br>
-                            <a href="">Leonardo da Vinci</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="mona-lisa">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/mona-lisa.jpg" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
-                        <figcaption>
-                            Mona Lisa <br>
-                            <a href="">Leonardo da Vinci</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="night-watch">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/night-watch.jpg" alt="Painting 'The Night Watch'. Rembrandt">
-                        <figcaption>
-                            The Night Watch <br>
-                            <a href="">Rembrandt Harmenszoon van Rijn</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="pearl-earring">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/pearl-earring.jpg"
-                            alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
-                        <figcaption>
-                            The Girl With A Pearl Earring <br>
-                            <a href="">Johannes Vermeer</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="persistence-of-memory">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/persistence-of-memory.jpg"
-                            alt="Painting 'The Persistence Of Memory'. Salvador Dali">
-                        <figcaption>
-                            The Persistence Of Memory <br>
-                            <a href="">Salvador Dali</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="scream">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/scream.jpg" alt="Painting 'The Scream'. Edvard Munch">
-                        <figcaption>
-                            The Scream <br>
-                            <a href="">Edvard Munch</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="starry-night">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/starry-night.jpg" alt="Painting 'The Starry Night'. Vincent van Gogh">
-                        <figcaption>
-                            The Starry Night <br>
-                            <a href="">Vincent van Gogh</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-            <li id="whistlers-mother">
-                <div class="p-container">
-                    <figure>
-                        <img src="../images/alex/whistlers-mother.jpg"
-                            alt="Painting 'Whistler's Mother'. James McNeill Whistler">
-                        <figcaption>
-                            Whistler's Mother <br>
-                            <a href="">James McNeill Whistler</a>
-                        </figcaption>
-                    </figure>
-                </div>
-            </li>
-        </ul>
+        <section>
+            <ul id="gallery">
+                <li id="birth-of-venus">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/birth-of-venus.jpg"
+                                alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+                            <figcaption>
+                                The Birth Of Venus <br>
+                                <a href="">Sandro Botticelli</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="guernica">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/guernica.jpg" alt="Painting 'Guernica'. Pablo Picasso">
+                            <figcaption>
+                                Guernica <br>
+                                <a href="">Pablo Picasso</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="last-supper">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/last-supper.jpg"
+                                alt="Painting 'The Last Supper'. Leonardo da Vinci">
+                            <figcaption>
+                                The Last Supper <br>
+                                <a href="">Leonardo da Vinci</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="mona-lisa">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/mona-lisa.jpg" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
+                            <figcaption>
+                                Mona Lisa <br>
+                                <a href="">Leonardo da Vinci</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="night-watch">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/night-watch.jpg" alt="Painting 'The Night Watch'. Rembrandt">
+                            <figcaption>
+                                The Night Watch <br>
+                                <a href="">Rembrandt Harmenszoon van Rijn</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="pearl-earring">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/pearl-earring.jpg"
+                                alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
+                            <figcaption>
+                                The Girl With A Pearl Earring <br>
+                                <a href="">Johannes Vermeer</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="persistence-of-memory">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/persistence-of-memory.jpg"
+                                alt="Painting 'The Persistence Of Memory'. Salvador Dali">
+                            <figcaption>
+                                The Persistence Of Memory <br>
+                                <a href="">Salvador Dali</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="scream">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/scream.jpg" alt="Painting 'The Scream'. Edvard Munch">
+                            <figcaption>
+                                The Scream <br>
+                                <a href="">Edvard Munch</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="starry-night">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/starry-night.jpg"
+                                alt="Painting 'The Starry Night'. Vincent van Gogh">
+                            <figcaption>
+                                The Starry Night <br>
+                                <a href="">Vincent van Gogh</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+                <li id="whistlers-mother">
+                    <div class="p-container">
+                        <figure>
+                            <img src="../images/alex/whistlers-mother.jpg"
+                                alt="Painting 'Whistler's Mother'. James McNeill Whistler">
+                            <figcaption>
+                                Whistler's Mother <br>
+                                <a href="">James McNeill Whistler</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <h5>Copyright ®</h5>
@@ -198,7 +207,8 @@
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
-                <path d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
+                <path
+                    d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
             </g>
         </svg>
     </a>
