--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -1,58 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tickets</title>
 
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/tickets.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tickets</title>
+
+  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="../css/tickets.css" />
+</head>
+
+<body>
   <header id="header" class="up-container">
-      <div class="container">
-        <a href="#top">
-          <img
-            id="logo"
-            src="./images/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
-            alt="logo"
-          />
-          <h1>Fan Gogh</h1>
-        </a>
-        <ul>
-          <li><a href="">PAINTINGS</a></li>
-          <li><a href="">ARTISTS</a></li>
-          <li><a href="#blue-box">TICKETS</a></li>
-        </ul>
-      </div>
-</header>
-    <main>
-      <div class="flex-container">
-        <h2>Tickets</h2>
-        <p>Choose the best suitable date for you to visit our exhibition</p>
-      </div>
-       <div class="grid-container">
-        <div class="item">Mar 8</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Mar 10</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Mar 12</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Mar 14</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Mar 22</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Apr 3</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Apr 7</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-        <div class="item">Apr 10</div>
-        <div class="buy-btn-small"><a href="#">Buy</a></div>
-      
-    </main>
-    <footer>
-      <h5>Copyright ®</h5>
-    </footer>
-  </body>
+    <div class="container">
+      <a href="../index.html">
+        <img id="logo"
+          src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
+          alt="logo">
+        <strong>Fan Gogh</strong>
+      </a>
+      <ul>
+        <li><a href="">PAINTINGS</a></li>
+        <li><a href="./artists.html">ARTISTS</a></li>
+        <li><a href="./tickets.html">TICKETS</a></li>
+      </ul>
+    </div>
+  </header>
+  <section>
+    <h1></h1>
+  </section>
+  <section>
+
+  </section>
+</body>
+
 </html>
