--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -2,37 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tickets</title>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Tickets</title>
 
-  <link rel="stylesheet" href="../css/main.css" />
-  <link rel="stylesheet" href="../css/tickets.css" />
+	<link rel="stylesheet" href="../css/main.css" />
+	<link rel="stylesheet" href="../css/tickets.css" />
 </head>
 
 <body>
-  <header id="header" class="up-container">
-    <div class="container">
-      <a href="../index.html">
-        <img id="logo"
-          src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
-          alt="logo">
-        <strong>Fan Gogh</strong>
-      </a>
-      <ul>
-        <li><a href="">PAINTINGS</a></li>
-        <li><a href="./artists.html">ARTISTS</a></li>
-        <li><a href="./tickets.html">TICKETS</a></li>
-      </ul>
-    </div>
-  </header>
-  <section>
-    <h1></h1>
-  </section>
-  <section>
+	<header id="header" class="up-container">
+		<div class="container">
+			<a href="../index.html">
+				<img id="logo"
+					src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
+					alt="logo">
+				<strong>Fan Gogh</strong>
+			</a>
+			<ul>
+				<li><a href="./paintings.html">PAINTINGS</a></li>
+				<li><a href="./artists.html">ARTISTS</a></li>
+				<li><a href="">TICKETS</a></li>
+			</ul>
+		</div>
+	</header>
+	<section>
+		<h1>"Fan Gogh" Tickets</h1>
+		<h2>Book your tickets today!</h2>
+	</section>
+	<section>
 
-  </section>
+	</section>
 </body>
 
 </html>
