--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -9,14 +9,12 @@
     <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"  rel="stylesheet" />
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
 
 <body>
-    <div id="top"></div>
     <header id="header" class="up-container">
         <div class="container">
             <a href="../index.html">
@@ -84,8 +82,7 @@
                 <li id="birth-of-venus">
                     <div class="p-container">
                         <figure>
-                            <img src="../images/alex/birth-of-venus.jpg"
-                                alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+                            <img src="../images/alex/birth-of-venus.jpg" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
                             <figcaption>
                                 The Birth Of Venus <br>
                                 <a href="">Sandro Botticelli</a>
