--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -6,7 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Tickets</title>
-
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"  rel="stylesheet" />
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/tickets.css" />
 </head>
@@ -15,9 +17,7 @@
 	<header id="header" class="up-container">
 		<div class="container">
 			<a href="../index.html">
-				<img id="logo"
-					src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png"
-					alt="logo">
+				<img id="logo" src="../images/othavio/icons/Retrato-de-van-gogh-p-arte-de-pintura-blocos-de-constru-o-pintor-abstrato-famoso-mosaico.png" alt="logo">
 				<strong>Fan Gogh</strong>
 			</a>
 			<ul>
@@ -28,12 +28,158 @@
 		</div>
 	</header>
 	<section>
-		<h1>"Fan Gogh" Tickets</h1>
-		<h2>Book your tickets today!</h2>
+		<div class="t-container">
+			<h1>"Fan Gogh" Tickets</h1>
+			<h2>Everyone is booking tickets today!</h2>
+			<div class="t-img-wrap">
+				<img src="../images/alex/last-supper.jpg" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+			</div>
+		</div>
 	</section>
 	<section>
+		<div class="t-container">
+			<table>
+				<thead>
+					<tr>
+						<th><h3>Upcoming exhibitions</h3></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<b>January 25</b>
+							<em>Wen - 7:00pm</em>
+						</td>
+						<td>
+							<b>City Gallery</b>
+							<em>Dublin, Ireland</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>January 26</b>
+							<em>Tue - 7:00pm</em>
+						</td>
+						<td>
+							<b>City Gallery</b>
+							<em>Dublin, Ireland</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>January 27</b>
+							<em>Fri - 7:00pm</em>
+						</td>
+						<td>
+							<b>City Gallery</b>
+							<em>Dublin, Ireland</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>February 1</b>
+							<em>Wen - 7:00pm</em>
+						</td>
+						<td>
+							<b>National Gallery</b>
+							<em>Berlin, German</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>February 2</b>
+							<em>Tue - 7:00pm</em>
+						</td>
+						<td>
+							<b>National Gallery</b>
+							<em>Berlin, German</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>February 3</b>
+							<em>Fri - 7:00pm</em>
+						</td>
+						<td>
+							<b>National Gallery</b>
+							<em>Berlin, German</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
 
+					
+					<tr>
+						<td>
+							<b>February 11</b>
+							<em>Wen - 7:00pm</em>
+						</td>
+						<td>
+							<b>Louvre Museum</b>
+							<em>Paris, France</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>February 12</b>
+							<em>Tue - 7:00pm</em>
+						</td>
+						<td>
+							<b>Louvre Museum</b>
+							<em>Paris, France</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<b>February 13</b>
+							<em>Fri - 7:00pm</em>
+						</td>
+						<td>
+							<b>Louvre Museum</b>
+							<em>Paris, France</em>
+						</td>
+						<td>
+							<button>Book now</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</section>
+	<footer>
+        <h5>Copyright ®</h5>
+    </footer>
+    <a href="#top" id="to-top-btn">
+        <svg viewBox="0 0 32 32">
+            <g>
+                <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
+                <path
+                    d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
+            </g>
+        </svg>
+    </a>
 </body>
 
 </html>
