--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +11,6 @@
 	<link rel="stylesheet" href="../css/main.css" />
 	<link rel="stylesheet" href="../css/tickets.css" />
 </head>
-
 <body>
 	<header id="header" class="up-container">
 		<div class="container">
@@ -123,8 +121,6 @@
 							<button>Book now</button>
 						</td>
 					</tr>
-
-					
 					<tr>
 						<td>
 							<b>February 11</b>
@@ -175,8 +171,7 @@
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
-                <path
-                    d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
+                <path d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
             </g>
         </svg>
     </a>
