--- a/pages/artists.html
+++ b/pages/artists.html
@@ -40,43 +40,35 @@
 
             <ul class="container1">
                 <li>
-                    <img class="artist-pictures" src="../images/varie/davinci.jpg"
-                        alt="A picture of the artist Leonardo da Vinci">
+                    <img class="artist-pictures" src="../images/varie/davinci.jpg" alt="A picture of the artist Leonardo da Vinci">
                     <a href="#davinci">Leonardo da Vinci</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/vangogh.jpg"
-                        alt="A picture of the artist Vincent van Gogh">
+                    <img class="artist-pictures" src="../images/varie/vangogh.jpg" alt="A picture of the artist Vincent van Gogh">
                     <a href="#gogh">Vincent van Gogh</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/edward-munch.jpg"
-                        alt="A picture of the artist Edward Munch">
+                    <img class="artist-pictures" src="../images/varie/edward-munch.jpg" alt="A picture of the artist Edward Munch">
                     <a href="#munch">Edward Munch</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/johannes-vermeer.jpg"
-                        alt="A picture of the artist Johannes_Vermeer">
+                    <img class="artist-pictures" src="../images/varie/johannes-vermeer.jpg" alt="A picture of the artist Johannes_Vermeer">
                     <a href="#vermeer">Johannes Vermeer</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/Sandro-Botticelli.jpg"
-                        alt="A picture of the artist Sandro Botticelli">
+                    <img class="artist-pictures" src="../images/varie/Sandro-Botticelli.jpg" alt="A picture of the artist Sandro Botticelli">
                     <a href="#botticelli">Sandro Botticelli</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/rembrandt.jpg"
-                        alt="A picture of the artist Rembrandt">
+                    <img class="artist-pictures" src="../images/varie/rembrandt.jpg" alt="A picture of the artist Rembrandt">
                     <a href="#rembrandt">Rembrandt</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/salvador-dali.jpg"
-                        alt="A picture of the artist Salvador Dali">
+                    <img class="artist-pictures" src="../images/varie/salvador-dali.jpg" alt="A picture of the artist Salvador Dali">
                     <a href="#dali">Salvador Dali</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/james-mcnelli-whistler.jpg"
-                        alt="A picture of the artist James McNeill Whistler">
+                    <img class="artist-pictures" src="../images/varie/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
                     <a href="#whistler">James McNeill Whistler</a>
                 </li>
             </ul>
@@ -84,7 +76,7 @@
     </section>
 
     <section class="more-info">
-        <div class="div-info" id="davinci">
+        <article class="div-info" id="davinci">
             <strong>Leonardo di ser Piero da Vinci</strong>
             <P>
                 Leonardo di ser Piero da Vinci (1452 - 1519) was an Italian polymath of the High Renaissance who was
@@ -94,10 +86,9 @@
                 botany, cartography, painting, and paleontology.
             </P>
             <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="gogh">
+        <article class="div-info" id="gogh">
             <strong>Vincent Willem van Gogh</strong>
             <p>
                 Vincent Willem van Gogh (1853 - 1890) was a Dutch Post-Impressionist painter who posthumously became one
@@ -105,11 +96,9 @@
                 In a decade, he created about 2,100 artworks, including around 860 oil paintings.
             </p>
             <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="munch">
+        <article class="div-info" id="munch">
             <strong>Edvard Munch</strong>
             <p>
                 Edvard Munch(1863 - 1944) was a Norwegian painter. His best known work, The Scream (1893), has become
@@ -119,10 +108,9 @@
                 angst of the modern person.
             </p>
             <a href="https://en.wikipedia.org/wiki/Edvard_Munch" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="vermeer">
+        <article class="div-info" id="vermeer">
             <strong>Johannes Vermeer </strong>
             <p>
                 Johannes Vermeer also known as Jan Vermeer; (1632 - 1675) was a Dutch Baroque Period painter who
@@ -131,10 +119,9 @@
                 The Hague.
             </p>
             <a href="https://en.wikipedia.org/wiki/Johannes_Vermeer" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="botticelli">
+        <article class="div-info" id="botticelli">
             <strong>Sandro Botticelli</strong>
             <p>
                 Sandro Botticelli officially known as Alessandro di Mariano di Vanni Filipepi (1445 - 1510), known as,
@@ -143,10 +130,9 @@
                 many of Botticelli's works.
             </p>
             <a href="https://en.wikipedia.org/wiki/Sandro_Botticelli" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="rembrandt">
+        <article class="div-info" id="rembrandt">
             <strong>Rembrandt Harmenszoon van Rijn</strong>
             <p>
                 Rembrandt Harmenszoon van Rijn (1606 - 1669), usually simply known as Rembrandt, was a Dutch Golden Age
@@ -158,10 +144,9 @@
                 Europe, and his wider reputation was initially based on them alone.
             </p>
             <a href="https://en.wikipedia.org/wiki/Rembrandt" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="dali">
+        <article class="div-info" id="dali">
             <strong>Salvador Dalí</strong>
             <p>
                 Salvador Dalí was a Spanish surrealist artist renowned for his technical skill, precise draftsmanship,
@@ -170,10 +155,9 @@
                 famous Surrealist paintings.
             </p>
             <a href="https://en.wikipedia.org/wiki/Salvador_Dal%C3%AD" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
         <br>
-        <div class="div-info" id="whistler">
+        <article class="div-info" id="whistler">
             <strong>James Abbott McNeill Whistler</strong>
             <p>
                 James Abbott McNeill Whistler (1834 - 1903) was an American painter active during the American Gilded
@@ -182,13 +166,13 @@
                 Mother, is a revered and often parodied portrait of motherhood.
             </p>
             <a href="https://en.wikipedia.org/wiki/James_Abbott_McNeill_Whistler" target="_blank">Read more</a>
-            <a href="#artists">Return to top</a>
-        </div>
+        </article>
     </section>
 
     <footer>
         <h5>Copyright ®</h5>
     </footer>
+
     <a href="#top" id="to-top-btn">
         <svg viewBox="0 0 32 32">
             <g>
