container correction and responsive header

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -19,17 +19,16 @@
 </head>
 
 <body>
-    <div id="top"></div>
-    <header id="header" class="up-container">
-        <div class="container">
-            <a href="../index.html">
-                <img id="logo" src="../images/othavio/icons/favicon-32x32.png" alt="logo">
+    <header id="header">
+        <div class="container center-flex">
+            <a href="#top">
+                <img id="logo" src="./images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
-                <li><a href="./paintings.html">PAINTINGS</a></li>
-                <li><a href="">ARTISTS</a></li>
-                <li><a href="./tickets.html">TICKETS</a></li>
+                <li><a href="./pages/paintings.html">PAINTINGS</a></li>
+                <li><a href="./pages/artists.html">ARTISTS</a></li>
+                <li><a href="./pages/tickets.html">TICKETS</a></li>
             </ul>
         </div>
     </header>
