--- a/pages/artists.html
+++ b/pages/artists.html
@@ -22,13 +22,13 @@
     <header id="header">
         <div class="container center-flex">
             <a href="#top">
-                <img id="logo" src="./images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
+                <img id="logo" src="../images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
-                <li><a href="./pages/paintings.html">PAINTINGS</a></li>
-                <li><a href="./pages/artists.html">ARTISTS</a></li>
-                <li><a href="./pages/tickets.html">TICKETS</a></li>
+                <li><a href="../pages/paintings.html">PAINTINGS</a></li>
+                <li><a href="../pages/artists.html">ARTISTS</a></li>
+                <li><a href="../pages/tickets.html">TICKETS</a></li>
             </ul>
         </div>
     </header>
