finish homepage responsivity and header changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
       <section id="information">
         <div class="container center-flex">
-          <h2>The 4 Most Famous Paintings In The World</h2>
+          <a href="./pages/paintings.html">
+            <h2>The 4 Most Famous Paintings In The World</h2>
+          </a>
           <ul class="second-size center-flex">
             <li>
               <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/mona-lisa.png" alt="Mona Lisa painting; Oil on poplar panel"/>
