--- a/pages/artists.html
+++ b/pages/artists.html
@@ -21,7 +21,7 @@
 <body>
     <header id="header">
         <div class="container center-flex">
-            <a href="#top">
+            <a href="../index.html">
                 <img id="logo" src="../images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
                 <strong>Fan Gogh</strong>
             </a>
