change button transition speed and header links correction

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -27,7 +27,7 @@
             </a>
             <ul>
                 <li><a href="../pages/paintings.html">PAINTINGS</a></li>
-                <li><a href="../pages/artists.html">ARTISTS</a></li>
+                <li><a href="#top">ARTISTS</a></li>
                 <li><a href="../pages/tickets.html">TICKETS</a></li>
             </ul>
         </div>
