--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -22,7 +22,7 @@
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
-                <li><a href="../pages/paintings.html">PAINTINGS</a></li>
+                <li><a href="#top">PAINTINGS</a></li>
                 <li><a href="../pages/artists.html">ARTISTS</a></li>
                 <li><a href="../pages/tickets.html">TICKETS</a></li>
             </ul>
