--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="../pages/paintings.html">PAINTINGS</a></li>
 				<li><a href="../pages/artists.html">ARTISTS</a></li>
-				<li><a href="../pages/tickets.html">TICKETS</a></li>
+				<li><a href="#top">TICKETS</a></li>
 			</ul>
 		</div>
 	</header>
