--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -31,7 +31,7 @@
 
     <main>
         <section class="contents">
-            <div class="p-container">
+            <div class="container">
                 <h1>"Fan Gogh" Exhibition Paintings</h1>
                 <p><em>Page contents:</em></p>
                 <ul class="p-contents">
@@ -79,116 +79,116 @@
         <section>
             <ul id="gallery">
                 <li id="birth-of-venus">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/birth-of-venus.jpg" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
                             <figcaption>
                                 The Birth Of Venus <br>
-                                <a href="">Sandro Botticelli</a>
+                                <a href="./artists.html#botticelli">Sandro Botticelli</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="guernica">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/guernica.jpg" alt="Painting 'Guernica'. Pablo Picasso">
                             <figcaption>
                                 Guernica <br>
-                                <a href="">Pablo Picasso</a>
+                                <a href="./artists.html#">Pablo Picasso</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="last-supper">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/last-supper.jpg"
                                 alt="Painting 'The Last Supper'. Leonardo da Vinci">
                             <figcaption>
                                 The Last Supper <br>
-                                <a href="">Leonardo da Vinci</a>
+                                <a href="./artists.html#davinci">Leonardo da Vinci</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="mona-lisa">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/mona-lisa.jpg" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
                             <figcaption>
                                 Mona Lisa <br>
-                                <a href="">Leonardo da Vinci</a>
+                                <a href="./artists.html#davinci">Leonardo da Vinci</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="night-watch">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/night-watch.jpg" alt="Painting 'The Night Watch'. Rembrandt">
                             <figcaption>
                                 The Night Watch <br>
-                                <a href="">Rembrandt Harmenszoon van Rijn</a>
+                                <a href="./artists.html#rembrandt">Rembrandt Harmenszoon van Rijn</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="pearl-earring">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/pearl-earring.jpg"
                                 alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
                             <figcaption>
                                 The Girl With A Pearl Earring <br>
-                                <a href="">Johannes Vermeer</a>
+                                <a href="./artists.html#vermeer">Johannes Vermeer</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="persistence-of-memory">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/persistence-of-memory.jpg"
                                 alt="Painting 'The Persistence Of Memory'. Salvador Dali">
                             <figcaption>
                                 The Persistence Of Memory <br>
-                                <a href="">Salvador Dali</a>
+                                <a href="./artists.html#dali">Salvador Dali</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="scream">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/scream.jpg" alt="Painting 'The Scream'. Edvard Munch">
                             <figcaption>
                                 The Scream <br>
-                                <a href="">Edvard Munch</a>
+                                <a href="./artists.html#munch">Edvard Munch</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="starry-night">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/starry-night.jpg"
                                 alt="Painting 'The Starry Night'. Vincent van Gogh">
                             <figcaption>
                                 The Starry Night <br>
-                                <a href="">Vincent van Gogh</a>
+                                <a href="./artists.html#gogh">Vincent van Gogh</a>
                             </figcaption>
                         </figure>
                     </div>
                 </li>
                 <li id="whistlers-mother">
-                    <div class="p-container">
+                    <div class="container">
                         <figure>
                             <img src="../images/alex/whistlers-mother.jpg"
                                 alt="Painting 'Whistler's Mother'. James McNeill Whistler">
                             <figcaption>
                                 Whistler's Mother <br>
-                                <a href="">James McNeill Whistler</a>
+                                <a href="./artists.html#whistler">James McNeill Whistler</a>
                             </figcaption>
                         </figure>
                     </div>
