--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -26,7 +26,7 @@
 		</div>
 	</header>
 	<section>
-		<div class="t-container">
+		<div class="container">
 			<h1>"Fan Gogh" Tickets</h1>
 			<h2>Everyone is booking tickets today!</h2>
 			<div class="t-img-wrap">
@@ -35,7 +35,7 @@
 		</div>
 	</section>
 	<section>
-		<div class="t-container">
+		<div class="container">
 			<table>
 				<thead>
 					<tr>
