--- a/pages/artists.html
+++ b/pages/artists.html
@@ -70,6 +70,10 @@
                     <img class="artist-pictures" src="../images/varie/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
                     <a href="#whistler">James McNeill Whistler</a>
                 </li>
+                <li>
+                    <img class="artist-pictures" src="../images/varie/pablo-picasso.jpg" alt="A picture of the artist Pablo Picasso">
+                    <a href="#pablo">Pablo Picasso</a>
+                </li>
             </ul>
         </div>
     </section>
@@ -165,6 +169,16 @@
                 Mother, is a revered and often parodied portrait of motherhood.
             </p>
             <a href="https://en.wikipedia.org/wiki/James_Abbott_McNeill_Whistler" target="_blank">Read more</a>
+        </article>
+        <br>
+        <article class="div-info" id="pablo">
+            <strong>Pablo Picasso</strong>
+            <p>
+                Pablo Ruiz Picasso (1881 - 1973) was a Spanish painter, sculptor, printmaker, ceramicist and theatre designer who spent most of his adult life in France.
+                One of the most influential artists of the 20th century, he is known for co-founding the Cubist movement, the invention of constructed sculpture, the co-invention of collage, and for the wide variety of styles that he helped develop and explore. 
+                Among his most famous works are the proto-Cubist Les Demoiselles d'Avignon, and the anti-war painting Guernica a dramatic portrayal of the bombing of Guernica by German and Italian air forces during the Spanish Civil War.
+            </p>
+        <a href="https://en.wikipedia.org/wiki/Pablo_Picasso" target="_blank">Read more</a>
         </article>
     </section>
 
